Replaced selected colors
ccc -> dce3e6
e9e9e9 -> dce3e6
363636 -> 0c0d0d
888 -> 696e6f

--- a/src/scss/components/entity_related/layout.scss
+++ b/src/scss/components/entity_related/layout.scss
@@ -42,7 +42,7 @@
   display: inline-block;
   font-size: 13px;
   font-weight: 500;
-  color: #363636;
+  color: #0c0d0d;
 }
 
 .entity-related-loading-box.is-loading {
