--- a/src/scss/components/entity_related/stats.scss
+++ b/src/scss/components/entity_related/stats.scss
@@ -21,7 +21,7 @@
     }
 
     .entity-stats-subtitle {
-      color: #888;
+      color: #696e6f;
     }
 
     .entity-stats-big-num {
@@ -72,7 +72,7 @@
     .entity-stats-detail {
       background: #fff;
       border-radius: 2px;
-      border: 1px solid #e9e9e9;
+      border: 1px solid #dce3e6;
       box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.24);
       color: #000;
       display: none;
