--- a/src/scss/components/form/calendar.scss
+++ b/src/scss/components/form/calendar.scss
@@ -22,7 +22,7 @@
       margin: 0;
       padding: 0;
       position: relative;
-      color: #363636;
+      color: #0c0d0d;
       font-size: 13px;
       font-weight: 500;
       text-align: center;
@@ -42,7 +42,7 @@
       background: #fff;
 
       > .ui-datepicker-month {
-        color: #363636;
+        color: #0c0d0d;
       }
 
       select {
@@ -73,20 +73,20 @@
     }
 
     .ui-datepicker-next:active {
-      background: #e9e9e9;
+      background: #dce3e6;
       outline: 0;
     }
 
     .ui-datepicker-prev {
       &:active {
-        background: #e9e9e9;
+        background: #dce3e6;
         outline: 0;
       }
 
       left: 10px;
 
       &:after {
-        color: #888;
+        color: #696e6f;
         content: '\f2fa';
       }
     }
@@ -95,7 +95,7 @@
       right: 10px;
 
       &:after {
-        color: #888;
+        color: #696e6f;
         content: '\f2fb';
       }
     }
@@ -120,13 +120,13 @@
         min-width: 32px;
         padding: 0;
         text-align: center;
-        color: #888;
+        color: #696e6f;
         font-weight: 500;
       }
 
       td {
         position: relative;
-        color: #363636;
+        color: #0c0d0d;
         font-weight: 400;
         cursor: pointer;
 
@@ -134,7 +134,7 @@
           position: relative;
           display: block;
           border-radius: 50%;
-          color: #363636;
+          color: #0c0d0d;
           background: 0 0;
           z-index: 3;
         }
@@ -142,7 +142,7 @@
         &:not(.is-selected) span:hover {
           -webkit-transition: background-color 0.3s;
           transition: background-color 0.3s;
-          background: #ccc;
+          background: #dce3e6;
         }
 
         &.is-first:before {
@@ -219,7 +219,7 @@
           cursor: default;
 
           span {
-            color: #ccc;
+            color: #dce3e6;
 
             &:hover {
               background: transparent;
