--- a/src/scss/components/form/entity_field.scss
+++ b/src/scss/components/form/entity_field.scss
@@ -5,7 +5,7 @@
 
 .entity-field-label {
   position: relative;
-  color: #888;
+  color: #696e6f;
   font-size: 12px;
   font-weight: 500;
   line-height: 20px;
@@ -16,7 +16,7 @@
   width: 100%;
 
   .entity-field-summary-value {
-    color: #ccc;
+    color: #dce3e6;
   }
 
   &.entity-field-smaller-width {
@@ -32,7 +32,7 @@
 
 .entity-field-edit-icon {
   display: none;
-  color: #888;
+  color: #696e6f;
   font-size: 12px;
   font-weight: 500;
   position: relative;
