--- a/src/scss/components/form/form_wizard.scss
+++ b/src/scss/components/form/form_wizard.scss
@@ -90,7 +90,7 @@
 
       &.wait .step-number {
         background-color: #f6f6f6 !important;
-        color: #ccc !important;
+        color: #dce3e6 !important;
         text-indent: -0px !important;
 
         &:before {
