--- a/src/scss/components/form/icon_selector.scss
+++ b/src/scss/components/form/icon_selector.scss
@@ -12,7 +12,7 @@
 
   .checkbox-display,
   .radio-button {
-    color: #363636;
+    color: #0c0d0d;
   }
 
   .checkbox-input:checked + .checkbox-display,
