--- a/src/scss/components/form/tag_collection.scss
+++ b/src/scss/components/form/tag_collection.scss
@@ -29,7 +29,7 @@
     transition: all 0.15s ease-in-out;
     top: 5px;
     right: 5px;
-    color: #888;
+    color: #696e6f;
 
     &:hover {
       color: #db4437;
@@ -56,7 +56,7 @@
   &.tag-interactive:hover {
     padding: 6px 10px;
     margin: 0 5px 5px 0;
-    background: #e9e9e9;
+    background: #dce3e6;
     box-shadow: none;
   }
 
