--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,22 +8,22 @@ html {
 }
 
 ::-webkit-input-placeholder {
-  color: #ccc;
+  color: #dce3e6;
   opacity: 1;
 }
 
 :-moz-placeholder {
-  color: #ccc;
+  color: #dce3e6;
   opacity: 1;
 }
 
 ::-moz-placeholder {
-  color: #ccc;
+  color: #dce3e6;
   opacity: 1;
 }
 
 :-ms-input-placeholder {
-  color: #ccc;
+  color: #dce3e6;
   opacity: 1;
 }
 
