--- a/src/scss/layout/admin/dashboard/entity_tile.scss
+++ b/src/scss/layout/admin/dashboard/entity_tile.scss
@@ -1,5 +1,5 @@
 .entity-tile {
-  color: #363636;
+  color: #0c0d0d;
   margin-top: 10px;
   min-height: 55px;
   position: relative;
@@ -31,5 +31,5 @@
 }
 
 .entity-tile-detail {
-  color: #888;
+  color: #696e6f;
 }
