--- a/src/scss/layout/admin/dashboard/onboarding_card.scss
+++ b/src/scss/layout/admin/dashboard/onboarding_card.scss
@@ -47,7 +47,7 @@
 }
 
 .dashboard-onboarding-icon-box {
-  background-color: #ccc;
+  background-color: #dce3e6;
   border-radius: 50%;
   color: #617e8b;
   display: inline-block;
@@ -86,7 +86,7 @@
 }
 
 .dashboard-onboarding-label {
-  color: #363636;
+  color: #0c0d0d;
   font-size: 13px;
   font-weight: 700;
   line-height: 18px;
@@ -94,7 +94,7 @@
 
 .dashboard-onboarding-instructions {
   position: absolute;
-  color: #888;
+  color: #696e6f;
   display: none;
   font-size: 12px;
   line-height: 16px;
@@ -121,7 +121,7 @@
 }
 
 .dashboard-onboarding-complete-text {
-  color: #ccc;
+  color: #dce3e6;
   font-size: 13px;
   font-weight: 700;
   line-height: 30px;
