--- a/src/scss/layout/admin/dashboard/report.scss
+++ b/src/scss/layout/admin/dashboard/report.scss
@@ -18,13 +18,13 @@
 }
 
 .dashboard-report-data-label {
-  color: #888;
+  color: #696e6f;
   margin-bottom: 0;
   white-space: nowrap;
 }
 
 .dashboard-report-data-value {
-  color: #363636;
+  color: #0c0d0d;
   font-size: 28px;
   white-space: nowrap;
 }
@@ -73,7 +73,7 @@
   white-space: nowrap;
 
   > h4 {
-    color: #888;
+    color: #696e6f;
   }
 }
 
@@ -93,7 +93,7 @@
 }
 
 .report-filter-dropdown-header {
-  color: #888;
+  color: #696e6f;
   font-weight: 500;
   font-size: 12px;
 }
