--- a/src/scss/layout/admin/settings/user.scss
+++ b/src/scss/layout/admin/settings/user.scss
@@ -4,7 +4,7 @@ img#settings-content-account-owner-button {
 }
 
 .settings-content-company-user-text {
-  color: #363636;
+  color: #0c0d0d;
 
   &.show-link {
     cursor: pointer;
