--- a/src/scss/components/form/form_upload.scss
+++ b/src/scss/components/form/form_upload.scss
@@ -25,7 +25,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #ccc;
+  background-color: #dce3e6;
   color: #fff;
   cursor: default;
   font-size: 50px;
