--- a/src/scss/components/modal/table.scss
+++ b/src/scss/components/modal/table.scss
@@ -16,7 +16,7 @@
       display: inline-block;
       width: 1px;
       height: 100%;
-      border-right: 1px solid #ccc;
+      border-right: 1px solid #dce3e6;
       vertical-align: bottom;
       margin: 0 15px 0 25px;
     }
@@ -100,11 +100,11 @@
     .icon {
       position: relative;
       font-size: 20px;
-      color: #888;
+      color: #696e6f;
       cursor: pointer;
 
       &:hover {
-        color: #363636;
+        color: #0c0d0d;
       }
     }
   }
@@ -113,8 +113,8 @@
     border-radius: 2px;
     background-color: #fff;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.19), 0 1px 6px rgba(0, 0, 0, 0.12);
-    border: 1px solid #ccc;
-    color: #363636;
+    border: 1px solid #dce3e6;
+    color: #0c0d0d;
     font-size: 12px;
     padding: 15px;
     position: absolute;
