--- a/src/scss/layout/admin/content.scss
+++ b/src/scss/layout/admin/content.scss
@@ -107,7 +107,7 @@
 
 .page-title {
   h1 {
-    color: #363636;
+    color: #0c0d0d;
     display: inline-block;
     line-height: 24px;
     margin-bottom: 14px;
@@ -125,7 +125,7 @@
 .page-title-description {
   font-size: 12px;
   font-weight: 400;
-  color: #888;
+  color: #696e6f;
   line-height: 1.1;
   margin-bottom: 12px;
 }
@@ -145,7 +145,7 @@
 
     &.is-dark,
     &.is-dark > a {
-      color: #363636;
+      color: #0c0d0d;
     }
   }
 
