--- a/src/scss/layout/admin/dashboard/layout.scss
+++ b/src/scss/layout/admin/dashboard/layout.scss
@@ -86,7 +86,7 @@
 
   .card {
     .empty-state {
-      color: #ccc;
+      color: #dce3e6;
       text-align: center;
       position: absolute;
       top: 50%;
