--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -1,3 +1,4 @@
+.btn-flat-default:hover,
 .btn-flat-alert:hover,
 .btn-flat-secondary:hover {
   background-color: transparent;
@@ -18,6 +19,8 @@
   color: rgba(12, 13, 13, 0.32);
 }
 
+.btn-flat-default:disabled,
+.btn-flat-default:disabled:hover,
 .btn-flat-alert:disabled,
 .btn-flat-alert:disabled:hover,
 .btn-flat-primary:disabled,
@@ -41,6 +44,8 @@
   color: rgba(255, 255, 255, 0.48);
 }
 
+.btn-flat-default:disabled.btn-dark,
+.btn-flat-default:disabled:hover.btn-dark,
 .btn-flat-alert:disabled.btn-dark,
 .btn-flat-alert:disabled:hover.btn-dark,
 .btn-flat-primary:disabled.btn-dark,
@@ -160,9 +165,15 @@
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
+.btn-flat-default:focus,
 .btn-flat-primary:focus,
 .btn-flat-secondary:focus {
   box-shadow: 0 0 0 4px #8fa0f5;
+}
+
+.btn-flat-default {
+  background-color: transparent;
+  color: #696e6f;
 }
 
 .btn-brand-primary:focus,
