--- a/src/scss/components/modal/layout.scss
+++ b/src/scss/components/modal/layout.scss
@@ -33,11 +33,16 @@
 }
 
 .modal-dialog {
+  height: 100%;
+
   &:not(.modal-lg) {
     max-width: 600px;
   }
+}
 
-  height: 100%;
+.modal-vertically-responsive .modal-dialog {
+  height: -webkit-calc(100% - 40px);
+  height: calc(100% - 40px);
 }
 
 .modal-form {
@@ -150,7 +155,8 @@
 }
 
 .modal-footer {
-  border-top: 1px solid #DCE3E6;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.25), inset 0 2px 5px 0 rgba(0, 0, 0, 0.08);
+  border-top: none;
   padding: 0;
   font-size: 0;
   text-align: right;
