--- a/src/scss/components/tab.scss
+++ b/src/scss/components/tab.scss
@@ -9,16 +9,18 @@
   display: inline-block;
   padding: 10px 20px;
   position: relative;
-  font-size: 13px;
-  font-weight: 600;
-  line-height: 20px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  color: #545454;
 
   &:after {
     background-color: #4a4060;
+    border-radius: 2px;
     bottom: 0;
     content: '';
     display: block;
-    height: 3px;
+    height: 4px;
     left: 0;
     position: absolute;
     right: 0;
@@ -29,13 +31,16 @@
   &.active,
   &:hover,
   &.tab-dashboard.active {
-    color: #0c0d0d;
     text-decoration: none;
   }
 
-  &.active:after {
-    transform: none;
-    transition: transform 0.2s cubic-bezier(0.55, 0, 0, 1);
+  &.active {
+    font-weight: 600;
+
+    &:after {
+      transform: none;
+      transition: transform 0.2s cubic-bezier(0.55, 0, 0, 1);
+    }
   }
 
   &.tab-dashboard {
@@ -65,11 +70,6 @@
     .tab {
       white-space: nowrap;
       padding: 6px 24px 18px;
-
-      &.active {
-        color: #0c0d0d;
-        font-weight: bold;
-      }
     }
   }
 }
