Restyled badge and bump version 2.0.21

--- a/src/scss/layout/admin/index.scss
+++ b/src/scss/layout/admin/index.scss
@@ -3,6 +3,7 @@
 @import '../../components/tooltip';
 @import '../../components/spinner';
 @import '../../components/banner';
+@import '../../components/badge';
 @import '../../components/buttons';
 @import '../../components/popup_container';
 @import '../../components/form/index';
