--- a/src/scss/components/list_page.scss
+++ b/src/scss/components/list_page.scss
@@ -162,6 +162,21 @@
   }
 }
 
+.list-page-container .list-search {
+  margin: 0 24px;
+}
+
+@media (max-width: 991.98px) {
+  .list-search {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .list-page-container .list-search {
+    display: none;
+  }
+}
+
 .list-filter-selector {
   border-bottom: 1px solid #dce3e6;
   display: inline-block;
@@ -270,6 +285,13 @@
   padding: 10px 20px 20px;
   margin: 0 24px 24px;
   z-index: 1;
+}
+
+@media (max-width: 991.98px) {
+  .list-page-chart {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
 
 .list-chart-summary-control-row,
@@ -488,6 +510,11 @@
 }
 
 @media (max-width: 991.98px) {
+  .list-page-chart {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
   .list-page-table {
     height: -webkit-calc(100% - 128px);
     height: calc(100% - 128px);
