--- a/src/scss/layout/admin/settings/layout.scss
+++ b/src/scss/layout/admin/settings/layout.scss
@@ -7,10 +7,9 @@
   overflow-y: auto;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
   .settings-content-main {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 16px 16px 0;
   }
 }
 
