--- a/src/scss/layout/admin/settings/layout.scss
+++ b/src/scss/layout/admin/settings/layout.scss
@@ -181,6 +181,12 @@
       min-width: 400px;
     }
 
+    &.is-id {
+      min-width: 60px;
+      width: 60px;
+      padding: 0 15px;
+    }
+
     .form-group {
       padding: 0;
       margin: 0;
