Re-added shadow to datagrid-tables-container and bump version 2.0.27

--- a/src/scss/components/list_page.scss
+++ b/src/scss/components/list_page.scss
@@ -511,6 +511,7 @@
     .datagrid-tables-container {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
+      box-shadow: 10px 10px 35px -15px rgba(0, 0, 0, 0.08);
     }
   }
 }
