Fixed color select datagrid row

--- a/src/scss/components/table/datagrid.scss
+++ b/src/scss/components/table/datagrid.scss
@@ -670,7 +670,7 @@ i.zmdi-circle-o:hover {
 .datagrid-table-row.datagrid-selected .datagrid-cell.table-cell-name .zmdi-local-atm,
 .datagrid-table-row.datagrid-selected .datagrid-cell.table-cell-name > a,
 .datagrid-table-row.datagrid-selected .datagrid-cell.table-cell-name > div {
-  color: #fff;
+  color: #3b3e3f;
 }
 
 .datagrid-table-row.datagrid-selected .datagrid-cell.table-cell-name.is-completed > div {
@@ -690,7 +690,7 @@ i.zmdi-circle-o:hover {
 .datagrid-table-row.datagrid-selected .table-cell-badge,
 .datagrid-table-row.datagrid-selected .table-cell-boolean,
 .datagrid-table-row.datagrid-selected .table-cell-text {
-  color: #fff;
+  color: #0c0d0d;
 }
 
 .datagrid-table-row.datagrid-selected .table-cell-date.is-overdue,
