--- a/src/scss/layout/admin/dashboard/layout.scss
+++ b/src/scss/layout/admin/dashboard/layout.scss
@@ -134,26 +134,31 @@
   .col-lg-2 {
     width: -webkit-calc(20% - 20px);
     width: calc(20% - 20px);
+    max-width: 20%;
   }
 
   .col-lg-4 {
     width: -webkit-calc(33.33333% - 20px);
     width: calc(33.33333% - 20px);
+    max-width: 33.33333%;
   }
 
   .col-lg-6 {
     width: -webkit-calc(50% - 20px);
     width: calc(50% - 20px);
+    max-width: 50%;
   }
 
   .col-lg-8 {
     width: -webkit-calc(66.66667% - 20px);
     width: calc(66.66667% - 20px);
+    max-width: 66.66667%;
   }
 
   .col-lg-12 {
     width: -webkit-calc(100% - 20px);
     width: calc(100% - 20px);
+    max-width: 100%;
   }
 }
 
