--- a/src/scss/components/modal/layout.scss
+++ b/src/scss/components/modal/layout.scss
@@ -35,9 +35,11 @@
 .modal-dialog {
   height: 100%;
   max-width: 720px;
+}
 
-  &.modal-lg {
-    max-width: 992px;
+@media (min-width: 1200px) {
+  .modal-dialog.modal-lg {
+    max-width: 1140px;
   }
 }
 
