--- a/src/scss/components/entity_related/stats.scss
+++ b/src/scss/components/entity_related/stats.scss
@@ -69,4 +69,51 @@
       font-weight: 600;
     }
   }
+
+  .entity-stats-bar-chart {
+    display: table;
+    table-layout: fixed;
+    height: 200px;
+    border-bottom: 1px solid #f0f0f0;
+    margin: 0;
+
+    li {
+      position: relative;
+      display: table-cell;
+      vertical-align: bottom;
+      height: 200px;
+      min-width: 80px;
+
+      .bar {
+        margin: 0 24px;
+        display: block;
+        background: #f0f0f0;
+        border-radius: 4px 4px 0 0;
+        min-width: 32px;
+
+        .title {
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 100%;
+          padding: 5px 10px 0;
+      		display: block;
+          text-align: center;
+          word-wrap: break-word;
+          font-size: 13px;
+          font-weight: 500;
+          color: #f0f0f0;
+        }
+
+        .value {
+          position: relative;
+          top: -20px;
+          display: flex;
+          justify-content: center;
+          font-size: 11px;
+          font-weight: 600;
+        }
+      }
+    }
+  }
 }
