Fixed floating label dropdown multi select

--- a/src/scss/components/form/floating_label.scss
+++ b/src/scss/components/form/floating_label.scss
@@ -29,6 +29,9 @@
     height: 56px;
 
     &.dropdown-multiple {
+      height: auto;
+      min-height: 56px;
+
       .dropdown-tags {
         width: calc(100% - 16px);
       }
