--- a/src/scss/components/form/calendar.scss
+++ b/src/scss/components/form/calendar.scss
@@ -56,7 +56,7 @@
       transition: background-color 0.3s;
       background: 0 0;
       border: none;
-      border-radius: 50%;
+      border-radius: 8px;
       cursor: pointer;
       font-family: 'Material-Design-Iconic-Font';
       font-size: 24px;
@@ -65,6 +65,10 @@
       position: absolute;
       width: 32px;
       top: 0;
+
+      &:hover {
+        text-decoration: none;
+      }
     }
 
     .ui-datepicker-next .ui-icon,
@@ -133,26 +137,26 @@
         span {
           position: relative;
           display: block;
-          border-radius: 50%;
+          border-radius: 8px;
           color: #0c0d0d;
           background: 0 0;
+          border: 1px solid transparent;
           z-index: 3;
         }
 
         &:not(.is-selected) span:hover {
-          -webkit-transition: background-color 0.3s;
-          transition: background-color 0.3s;
-          background: #dce3e6;
+          border-radius: 8px;
+          background-color: #dce3e6;
         }
 
         &.is-first:before {
-          border-top-left-radius: 50%;
-          border-bottom-left-radius: 50%;
+          border-top-left-radius: 8px;
+          border-bottom-left-radius: 8px;
         }
 
         &.is-last:before {
-          border-top-right-radius: 50%;
-          border-bottom-right-radius: 50%;
+          border-top-right-radius: 8px;
+          border-bottom-right-radius: 8px;
         }
 
         &.is-in-range {
@@ -163,20 +167,20 @@
             bottom: 0;
             right: 0;
             left: 0;
-            background-color: #77c3fa;
+            background-color: #dce3e6;
             z-index: 1;
           }
 
           &.is-from,
           &.is-to {
-            border-radius: 50%;
+            border-radius: 8px;
           }
 
           &.is-from span,
           &.is-to span {
             color: #fff;
             font-weight: 700;
-            background: #0777c9;
+            background: #234ba5;
           }
 
           &.is-from {
@@ -228,12 +232,14 @@
         }
 
         &.ui-datepicker-today span {
-          color: #0777c9;
+          color: #234ba5;
           font-weight: 700;
+          border-color: #696e6f;
         }
 
         &.is-selected span {
-          background: #3eaaf8;
+          border-radius: 8px;
+          background: #234ba5;
           color: #fff;
           font-weight: 700;
         }
